# VectorDB

./: .gitignore  Cargo.toml  PLAN.md  README.md
docs/: RESEARCH.md
examples/: client_example.py  embeddings_generator.py  vectordb_client.py
src/: main.rs
src/vectordb/: mod.rs  vectorstore.rs
