[package]
name = "vectordb"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"
tokio = {version = "1.41.1", features = ["full"]}
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
actix-web = "4.9.0"
env_logger = "0.11.5"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }