[package]
name = "vectordb"
version = "0.1.0"
edition = "2021"


[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"
tokio = {version = "1.41.1", features = ["full"]}
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
actix-web = "4.9.0"
env_logger = "0.11.5"
log = "0.4.22"
rocksdb = "0.23.0"
bincode = "1.3.3"
hnsw_rs = "0.3"
num_cpus = "1.17.0"
rayon = "1.10.0"
arc-swap = "1.7.1"
rkyv = { version = "0.7", features = ["validation"] }

[features]
default = []
profiling = ["mimalloc"]

[dependencies.mimalloc]
version = "0.1"
optional = true

